###############################################################################
# Copyright (c) 2016-21, Lawrence Livermore National Security, LLC
# and RAJA project contributors. See the RAJA/COPYRIGHT file for details.
#
# SPDX-License-Identifier: (BSD-3-Clause)
###############################################################################

add_subdirectory(forall)

add_subdirectory(indexset-build)

add_subdirectory(kernel)

add_subdirectory(scan)

add_subdirectory(workgroup)

add_subdirectory(teams)
