###############################################################################
# Copyright (c) 2016-23, Lawrence Livermore National Security, LLC
# and RAJA project contributors. See the RAJA/LICENSE file for details.
#
# SPDX-License-Identifier: (BSD-3-Clause)
###############################################################################

add_subdirectory(index)
add_subdirectory(internal)
add_subdirectory(util)
add_subdirectory(reducer)
add_subdirectory(resource)
add_subdirectory(atomic)
add_subdirectory(view-layout)
add_subdirectory(algorithm)
add_subdirectory(workgroup)
