##
## Copyright (c) 2016, Lawrence Livermore National Security, LLC.
## 
## Produced at the Lawrence Livermore National Laboratory.
## 
## All rights reserved.
## 
## For release details and restrictions, please see raja/README-license.txt
##

add_subdirectory(LULESH-v2.0_RAJA-basic)
add_subdirectory(LULESH-v2.0_RAJA-IndexSet)
add_subdirectory(LULESH-v2.0_RAJA-MICfriendly)
