###############################################################################
# Copyright (c) 2016-20, Lawrence Livermore National Security, LLC
# and RAJA project contributors. See the RAJA/COPYRIGHT file for details.
#
# SPDX-License-Identifier: (BSD-3-Clause)
###############################################################################

add_subdirectory(indexset)
add_subdirectory(indexset-view)

add_subdirectory(segment)
add_subdirectory(segment-view)

add_subdirectory(atomic)
add_subdirectory(atomic-view)
add_subdirectory(atomic-ref)

add_subdirectory(reduce-sanity)

add_subdirectory(region)
